fix sizing issue with text box on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,13 @@ body {
   float: left;
   width: 45%;
   margin: 2%;
+  padding: 0%;
   color:white;
   text-align: center;
   font-weight: bold;
   font-size: 150%;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  box-sizing: border-box;
 }
 
 #valentino-img {
@@ -35,16 +37,30 @@ body {
   padding: 2% 3%;
   margin: 2%;
   border-radius: 2%;
+  display: block;
   box-sizing: border-box;
 }
 
-#form-group1 {
+#order-header {
+  font-style: italic;
+  text-align: center;
+  font-size: 150%;
   margin: 2%;
+}
+
+#form-group1 {
+  margin: 4%;
+  text-align: center;
 }
 
 .form-group {
   margin-top: -2px;
   margin: -3% 2% 2% 4%;
+}
+
+#customer-name {
+  box-sizing: border-box;
+  width: 50%;
 }
 
 #show-cost {
